Project debate_bias_calc {
  database_type: 'PostgreSQL'
  Note: 'Description of the project'
}

Table tournament_group.details {
  id integer [primary key]
  name text
  updated timestamp
  url text
  parent_group integer [ref: > tournament_group.details.id]
  to_scrape bool
  details json
  Note: "Examples: Washington State, TOC qualifiers, Urban Debate Leage, etc."
}

Table tournament_group.bindings {
  group integer [ref: > tournament_group.details.id]
  tournament integer [ref: > tournament.id]
}

Table tournament {
  id integer [primary key]
  name  text
  url text
  updated timestamp
  details json
  to_scrape bool
  leaf bool [note: 'to_scrape is false and leaf is true IFF tournament has never been scraped but is refered to by a round that came up when scraping a judge']
  Note: "Examples: UPS invitational, Rose City Round Robin, etc."
}

Table division {
  id integer
  tournament integer [ref: > tournament.id]
  division_name text
  format text [note: "Policy, LD, Public Forum"]
  level text [note: "Open, Novice, Varsity"]
  round text [note: "Semi-Final, Round 1, 3"]
  is_elimination bool
  url text
  date timestamp
  details json
  to_scrape bool
  leaf bool [note: 'to_scrape is false and leaf is true IFF division has never been scraped but is refered to by a round that came up when scraping a judge']
  Note: "Example: Novice Public Forum, Varsity Policy, Open Dramatic Interp"
}

Table pairing.team {
  url text [primary key]
  to_scrape bool
}

Table pairing.debater {
  name text
  school text
  first_name text [ref: > gender_binding.first_name]
  team text [ref: > pairing.team.url]
}

Table pairing.judge {
  url text [primary key]
  id integer [ref: > judge.id]
  to_scrape bool
}

Table pairing.votes {
  judge text [ref: > pairing.judge.url]
  team text [ref: <> pairing.team.url]
  division integer [ref: > division.id]
  tournament integer [ref: > tournament.id]
  won bool
  side text
}

Table pairing.speaker_points {
  judge integer [ref: > pairing.judge.id]
  team text [ref: <> pairing.debater.team]
  partial_name text [ref: <> pairing.debater.name]
  division integer [ref: > division.id]
  tournament integer [ref: > tournament.id]
  value decimal
  Note: "Partial name is most often just the debater last name, so JOIN pairing.debater ON team=team and partial_name IN name"
}

Table judge {
  id integer [primary key]
  name text
  first_name text [ref: > gender_binding.first_name]
  url text
  to_scrape bool
  updated timestamp
  details json
}

Table gender_binding {
  first_name text [primary key]
  male_count integer
  female_count integer
}
